--- a/css/style.css
+++ b/css/style.css
@@ -1,39 +1,152 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 /* Header css */
-.text-white {
+
+
+.header{
+    width: 100%;
     display: flex;
-    justify-content: space-around;
+    background-color: rgb(149, 145, 145);
+    height: 65px;
+    line-height: 65px;
+}
+
+.header-content{
+    width: 80%;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
     align-items: center;
+    margin: 0 auto;
+    background: rgb(149, 145, 145);
 }
 
-.nav-btn{
+
+.nav-links li a {
     color: white;
-}
-.nav {
     text-decoration: none;
+    font-size: 20px;
+    font-weight: 700;
+    padding: 10px 15px;
+    border-radius: 5px;
+    transition: all 0.3s ease;
+}
+
+.nav-links li a:hover{
+    background: rgb(68, 65, 64);
+}
+
+.nav-links li{
+    list-style: none;
+    
+}
+
+.nav-links{
+    
+    display: flex;
+    margin-top: 20px;
+}
+
+
+.logo-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black;
+}
+
+.logo{
+    width: 200px;
+    height: auto;
+
+}
+
+.btn{
     color: white;
+    font-size: 30px;
+    cursor: pointer;
+    display: none;
 }
 
-.nav:hover {
-    text-decoration: none;
-    color: #777;
+.cancel-btn{
+    position: absolute;
+    right: 30px;
+    top: 10px;
 }
 
-.header-img {
-    width: 50px;
-    height: 50px;
+#menu-btn{
+    display: none;
 }
+
+#cancel-btn{
+    display: none;
+}
+@media screen and (max-width: 880px)
+{
+
+    .btn {
+        display: block;
+    }
+
+  
+
+    .nav-links::-webkit-scrollbar{
+        width: 0px;
+    }
+
+    .nav-links{
+        position: fixed;
+        height: 100vh;
+        width: 100%;
+        max-width: 400px;
+        display: block;
+        background: rgb(90, 87, 84);
+        top: 0;
+        left: -100%;
+        overflow-y: auto;
+        line-height: 50px;
+        padding: 50px 10px;
+        transition: all 0.3s ease;
+    }
+
+    #menu-btn:checked ~ .nav-links{
+        left: 0%;
+    }
+
+    .nav-links li {
+        margin: 15px 10px;
+    }
+
+    .nav-links li a {
+        padding: 0 20px;
+        display: block;
+        font-size: 20px;
+    }
+
+    
+
+
+}
+
+
+
+
 
 /* Character css */
 
 .character-body{
     display: flex;
-    background-color: rgb(68, 65, 64);
+    background-image: linear-gradient(to bottom right, rgb(68, 65, 64), rgb(134, 22, 42)); 
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.header{
+.text-header{
     font-size: 40px;
     width: 30%;
     display: flex;
@@ -47,7 +160,6 @@
 #char-main-content{
     width: 100%;
     height: auto;
-    background:rgb(68, 65, 64);
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -180,6 +292,35 @@
 }
 
 .cards{
-    border-radius: 20px;
+    border-radius: 50px;
     background: #a39ea1;
+}
+
+.back-btn-container{
+    
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.back-btn{
+
+    width: 15%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 20px;
+    margin-top: 20px;
+    border-radius: 10px;
+    background: rgb(149, 145, 145, 0.2);
+}
+
+.back-btn a{
+    text-decoration: none;
+    color: rgb(243, 243, 243);
+}
+.back-btn:hover{
+    background: rgb(149, 145, 145, 0.8);
 }
