--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border-bottom: 2px solid white;
+    border-bottom: 3px solid black;
     color: white;
     margin: 30px;
 }
@@ -178,8 +178,11 @@
     width: 25%;
     min-width: 250px;
     height: 100%;
-    color: white;
-    background-color: rgb(75, 72, 71);
+    color: black;
+    font-weight: 500;
+    font-size: 25px;
+    background-color: white;
+    border: 4px solid black;
     margin: 20px;
     display: flex;
     justify-content: center;
@@ -194,12 +197,12 @@
     height: 300px;
     object-fit: cover;
     border-radius: 20px;
-    border: 2px solid white;
+    border: 5px solid black;
 }
 
 .more-info-btn{
     background: rgb(149, 145, 145, 0.2);
-    color: white;
+    color: black;
     border: none;
     margin: 20px;
     border-radius: 10px;
@@ -212,7 +215,7 @@
 /*CSS for more information*/
 
 .more-info-card {
-    border: 2px solid white;
+    border: 5px solid black;
     width: 70%;
     min-width: 400px;
     border-radius: 20px;
@@ -234,7 +237,7 @@
 .char-image{
     width: 250px;
     border-radius: 50%;
-    border: 4px solid white;
+    border: 4px solid black;
 }
 
 .char-name{
@@ -292,7 +295,7 @@
 }
 
 .card-header {
-    color: white;
+    color: black;
     font-size: 30px;
 }
 
@@ -303,6 +306,7 @@
 
 .cards{
     border-radius: 20px;
+    border: 3px solid black;
     background: #a39ea1;
 }
 /* css for back button */
@@ -320,29 +324,27 @@
     width: 40%;
     display: flex;
     justify-content: space-around;
-    
 }
 
 .search-box{
     border: none;
     color: black;
-
 }
 
 .search-btn{
-    background: rgb(122, 117, 117);
+    background: white;
     border-radius: 5px;
     border: none;
     padding-left: 5px;
     padding-right: 5px;
+    font-size: 15px;
 }
 
 .search-btn:hover{
-    background: rgb(243, 243, 243);
+    background: rgb(139, 139, 139);
 }
 
 .back-btn{
-
     width: 15%;
     height: 50px;
     display: flex;
@@ -351,12 +353,13 @@
     margin-left: 20px;
     margin-top: 20px;
     border-radius: 10px;
-    background: rgb(149, 145, 145, 0.2);
+    background: white;
 }
 
 .back-btn a{
     text-decoration: none;
-    color: rgb(243, 243, 243);
+    color: black;
+    font-size: 20px;
 }
 .back-btn:hover{
     background: rgb(149, 145, 145, 0.8);
@@ -371,4 +374,90 @@
     color: white;
 }
 
+.home-container{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: linear-gradient(to bottom right, rgb(68, 65, 64), rgb(134, 22, 42),rgb(68, 65, 64) );
+}
 
+.carousel{
+    border: 5px solid black;
+    margin-top: 50px;
+    width: 70%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.slider-img{
+    width: 70%;
+    height: auto;
+}
+
+.about-series{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.home-header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30%;
+    margin-top: 50px;
+    color: white;
+    font-size: 30px;
+    padding-bottom: 10px;
+    border-bottom: 5px solid black;
+}
+
+.about-txt{
+    width: 60%;
+    border-radius: 50px;
+    border: 5px solid black;
+    display: flex;
+    background:white;
+    color: black;
+    padding: 50px;
+    margin-top: 50px;
+    text-align: justify;
+}
+
+.books{
+    background: white;
+    border-radius: 50px;
+    border: 3px solid black;
+    display: flex;
+    width: 90%;
+    justify-content: space-around;
+    margin-top: 50px;
+    flex-wrap: wrap;
+    padding-bottom: 50px;
+}
+
+.book-img{
+    width: 100%;
+    height: auto;
+}
+
+.book-txt{
+    color: black;
+    padding-top: 10px;
+    border-top: 2px solid black;
+    margin-top: 20px;
+    width: 100%;
+    text-align: justify;
+}
+
+.book-grouping{
+    display: flex;
+    width: 26%;
+    margin-top: 40px;
+    justify-content: flex-start;
+    flex-direction: column;
+}
