--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Montserrat';
 }
 
 /* Header css */
@@ -139,16 +140,11 @@
         width: 50%;
     }
 }
-
-
-
-
-
 /* Character css */
 
 .character-body{
     display: flex;
-    background-image: linear-gradient(to bottom right, rgb(68, 65, 64), rgb(134, 22, 42),rgb(68, 65, 64) ); 
+    background-image: radial-gradient(rgb(82, 82, 82), rgb(0, 0, 0));
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -160,7 +156,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border-bottom: 3px solid black;
+    border-bottom: 3px solid white;
     color: white;
     margin: 30px;
 }
@@ -181,8 +177,8 @@
     color: black;
     font-weight: 500;
     font-size: 25px;
-    background-color: white;
-    border: 4px solid black;
+    background-color: rgb(185, 185, 185);
+    border: 2px solid black;
     margin: 20px;
     display: flex;
     justify-content: center;
@@ -197,11 +193,12 @@
     height: 300px;
     object-fit: cover;
     border-radius: 20px;
-    border: 5px solid black;
+    border: 2px solid black;
 }
 
 .more-info-btn{
-    background: rgb(149, 145, 145, 0.2);
+    background: white;
+    border: 2px solid black;
     color: black;
     border: none;
     margin: 20px;
@@ -215,7 +212,7 @@
 /*CSS for more information*/
 
 .more-info-card {
-    border: 5px solid black;
+    border: 2px solid black;
     width: 70%;
     min-width: 400px;
     border-radius: 20px;
@@ -237,7 +234,7 @@
 .char-image{
     width: 250px;
     border-radius: 50%;
-    border: 4px solid black;
+    border: 2px solid black;
 }
 
 .char-name{
@@ -380,7 +377,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background: linear-gradient(to bottom right, rgb(68, 65, 64), rgb(134, 22, 42),rgb(68, 65, 64) );
+    background-image: radial-gradient(rgb(82, 82, 82), rgb(0, 0, 0));
 }
 
 .carousel{
@@ -429,6 +426,7 @@
 }
 
 .books{
+    
     background: white;
     border-radius: 50px;
     border: 3px solid black;
@@ -460,4 +458,79 @@
     margin-top: 40px;
     justify-content: flex-start;
     flex-direction: column;
+}
+
+/* Contact us page */
+.contact-main{
+    width: 100%;
+    display: flex;
+    background-image: radial-gradient(rgb(82, 82, 82), rgb(0, 0, 0));
+    /* background-image: linear-gradient(to bottom right, rgb(68, 65, 64), rgb(134, 22, 42),rgb(68, 65, 64) );  */
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; 
+    padding-bottom: 50px;
+}
+
+.contact-header{
+    width: 50%;
+    border-bottom: 3px solid black;
+    font-size: 25px;
+}
+
+label{
+    font-size: 20px;
+    color: #222;
+    
+}
+
+.remarks {
+    width: 100%;
+    resize: none;
+    height: 10em;
+}
+
+.contact-form button{
+	width: 100%;
+	margin-top: 10px;
+	padding: 15px 15px 15px;
+	font-size: 20px;
+	border-radius: 10px;
+	border: 2px solid #e5e5e5;
+	background-color: #222;
+	color: white;
+}
+
+.contact-form p{
+	margin: 10px auto;
+	width: 50%;
+}
+
+.contact-form{
+    display: flex;
+    align-items: center;
+	flex-direction: column;
+	justify-content: center;
+	background: white;
+	padding: 0px 20px 20px;
+    width: 60%;
+	margin: 100px auto 0;
+	box-shadow: 0 0 1em #555;
+	border-radius: 10px;
+}
+
+.textbox{
+	width: 100%;
+	border-radius: 5px;
+	font-size: 20px;
+	background: #f5f5f5;
+	border: 2px solid #e5e5e5;
+}
+
+.char-dob{
+    width: 100%;
+    border-radius: 5px;
+    font-size: 20px;
+    background: #f5f5f5;
+    border: 2px solid #e5e5e5;
 }
