--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,7 @@
     .search-box{
         width: 70%;
     }
+
     .search-btn{
         margin-top: 20px;
         width: 50%;
@@ -425,9 +426,9 @@
     text-align: justify;
 }
 
-.books{
+.books, .movies{
     
-    background: white;
+    background: snow;
     border-radius: 50px;
     border: 3px solid black;
     display: flex;
@@ -438,12 +439,25 @@
     padding-bottom: 50px;
 }
 
+.book-text-container, .movie-text-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin-top: 20px;
+}
+
+.movie-img{
+    width: 100%;
+    height: 700px;
+}
+
 .book-img{
     width: 100%;
     height: auto;
 }
 
-.book-txt{
+.book-txt, .movie-txt{
     color: black;
     padding-top: 10px;
     border-top: 2px solid black;
@@ -452,14 +466,35 @@
     text-align: justify;
 }
 
-.book-grouping{
+.book-grouping, .movie-grouping{
     display: flex;
     width: 26%;
     margin-top: 40px;
-    justify-content: flex-start;
+
     flex-direction: column;
 }
 
+@media (max-width: 1000px)
+{
+    .books, .movies{
+        flex-direction: column;
+    }
+
+    .book-img, .movie-img{
+        width: 50%;
+        margin-right: 10px;
+    }
+
+    .book-txt, .movie-txt{
+        width: 70%;
+    }
+
+    .book-grouping, .movie-grouping{
+        width: 100%;
+        flex-direction: row;
+        padding: 20px;
+    }
+}
 /* Contact us page */
 .contact-main{
     width: 100%;
